# DogBreedClassifierwithReact

./: .replit  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json
client/src/components/: ClassificationResult.tsx  HistoryGallery.tsx  UploadZone.tsx
client/src/lib/: ml.ts
client/src/pages/: Home.tsx
db/: schema.ts
server/: ml_server.py  ml_service.py  routes.ts
